--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*, :before, :after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 100vh;
+  background: #32353c;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.components {
+  margin-left: 168px;
+  height: 100vh;
 }
