--- a/frontend/src/EmpleadoComponent/style/ListarEmpleado.scss
+++ b/frontend/src/EmpleadoComponent/style/ListarEmpleado.scss
@@ -29,3 +29,17 @@
   border-collapse: collapse;
   width: 95%;
 }
+/*==============================================*/
+
+/*=============== Formulario ==================*/
+.modal-wrapperE {
+  top: 50%;
+  left: 40%;
+  background: #ededed;
+  width: auto;
+  margin: -39rem -12rem 0 0;
+  padding: 16px 32px 24px;
+  border: none;
+  outline: 0;
+  box-shadow: -1px 4px 20px 0 rgba(0, 0, 0, 0.35);
+}
